--- a/index.html
+++ b/index.html
@@ -1,22 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Пример веб-страницы</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="js.js" rel="stylesheet" type="text/js">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
             <div></div>
-            <div></div>
-            
+            <div>
+                <nav>
+                    <ul class="topmenu">
+                        <li class="firstli"><a href="">ГЛАВНАЯ</a></li>
+                        <li><a href="">MAN</a></li>
+                        <li><a href="">WOMAN</a></li>
+                        <li><a href="">KIDS</a></li>
+                        <li><a href="">PETS</a>
+                            <ul class="submenu">
+                                <li><a href="">ЧТО_ТО1</a></li>
+                                <li><a href="">ЧТО_ТО1</a></li>
+                                <li><a href="">ЧТО_ТО1</a></li>
+                                <li><a href="">ЧТО_ТО1</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">BEAUTY</a>
+                            <ul class="submenu">
+                                <li><a href="">ЧТО_ТО2</a></li>
+                                <li><a href="">ЧТО_ТО2</a></li>
+                                <li><a href="">ЧТО_ТО2</a></li>
+                                <li><a href="">ЧТО_ТО2</a></li>
+                            </ul>
+                        </li>
+                        <li class="lastli"><a href="">CONTACTS</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <div class="main"></div>
+
+        <div class="main">
+            <div class="nametitle">
+                <h1>Название раздела</h1>
+            </div>
+        </div>
         <div class="footer"></div>
     </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="phone">
+        <div class="container">
+
+
+            <div class="content">
+                <nav role="navigation">
+                    <div id="menuToggle">
+                        <input type="checkbox" />
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <ul id="menu">
+                            <li><a href="">ГЛАВНАЯ</a></li>
+                            <li><a href="">MAN</a></li>
+                            <li><a href="">WOMAN</a></li>
+                            <li><a href="">KIDS</a></li>
+                            <li><a href="">PETS</a>
+                            <li><a href="">CONTACTS</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+            <div class="main_phone">
+                <div class="nametitle_phone">
+                    <h1>Название раздела</h1>
+                </div>
+            </div>
+            <div class="footer_phone"></div>
+        </div>
+    </div>
+
+
+
 
 </body>
 
