--- a/dogs.html
+++ b/dogs.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogs</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
+
     <div class="container">
         <div class="header">
             <div class="hat">
@@ -27,7 +29,7 @@
                             <ul class="submenu">
                                 <li><a href="dogs.html">DOGS</a></li>
                                 <li><a href="cats.html">CATS</a></li>
-                                <li><a href="AAAAA.html">ЧТО_ТО</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
                             </ul>
                         </li>
                         <li><a>BEAUTY</a>
@@ -58,7 +60,21 @@
                         <li><a href="man.html">MAN</a></li>
                         <li><a href="woman.html">WOMAN</a></li>
                         <li><a href="kids.html">KIDS</a></li>
-                        <li><a href="">PETS</a>
+                        <li>PETS
+                            <ol>
+                                <li><a href="dogs.html">DOGS</a></li>
+                                <li><a href="cats.html">CATS</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
+                            </ol>
+                        </li>
+                        <li>BEAUTY
+                            <ol>
+                                <li><a href="diets.html">DIETS</a></li>
+                                <li><a href="trends.html">TRENDS</a></li>
+                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                            </ol>
+                        </li>
+
                         <li><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -157,8 +173,19 @@
             </div>
         </div>
         <div class="cellar">
-            <p>And what do we have here?</p>
+            <h4 class="wordCarousel">
+                <span>Fashion: </span>
+                <div>
+                    <ul class="flip4">
+                        <li>me</li>
+                        <li>you</li>
+                        <li>us</li>
+                        <li>is the world</li>
+                    </ul>
+                </div>
+            </h4>
         </div>
+        <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
