--- a/goose.html
+++ b/goose.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Goose</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/icon.png">
 </head>
@@ -81,22 +81,44 @@
 
         <div class="main">
             <div class="nametitle">
-                <h1>Contacts</h1>
+                <h1>BIRDS</h1> <br>
+                <h3>Гусиная мода</h3>
             </div>
             <div class="content">
-                <p>Красота − это обещание счастья, поэтому так важно знать о модных трендах. На
-                    нашем сайте можно увидеть актуальные новости, найти образы на свой вкус не
-                    только для женщин, но для мужчин, детей и даже животных. Красота есть во
-                    всем, но не всем дано это видеть, поэтому следите за новой информацией на
-                    вкладке «beauty»</p>
-
-                <div class="contacts">
-                    <h3>Контакты:</h3>
-                    <ul>
-                        <li>Почта: fashion@gmail.com</li>
-                        <li>Телефон: +79822035264</li>
-                        <li>Адрес: г. Санкт-Петербург, ул. Джамбула, дом 13</li>
-                    </ul>
+                <p> Уже давно все привыкли к стройным моделям, представляющим публике новинки моды, но о птичьем показе
+                    мод впервые
+                    заговорил житель Уэльс Брайан Харрингтон – фермер города Сиднея. По его мнению, своеобразные, но
+                    довольно
+                    привлекательные пернатые модели ничуть не уступают длинноногим красавицам.
+                </p> <br>
+                <div class="photosecond">
+                    <img src="img/goose1.jpg" alt="Здесь было фото гуся">
+                </div>
+                <p> На протяжении многих лет «модели» Харрингтона дефилируют на Королевском пасхальном фестивале Easter
+                    Show,
+                    причем всегда их наряды соответствуют последним тенденциям моды. Некоторым уткам уже перевалило за
+                    третий
+                    десяток, а это для таких участников уже достаточно солидный возраст.
+                </p> <br>
+                <p> Представление обычно длится около часа и заканчивается всегда традиционно – появлением прекрасных
+                    моделей
+                    в свадебных нарядах. В перерывах между выступлениями подиум приходится приводить в порядок, так как
+                    природные
+                    потребности пернатые модницы и модники предпочитают удовлетворять непосредственно перед зрителями.
+                </p>
+                <div class="photosecond">
+                    <img src="img/goose2.jpg" alt="Здесь было фото гуся">
+                </div>
+                <p> В австралийский город ежегодно съезжаются миллионы туристов, чтобы поучаствовать в замечательном
+                    фестивале,
+                    а также полюбоваться птичьим показом мод. Кстати, утки и гуси здесь могут не только расхаживать в
+                    красивых
+                    нарядах по подиуме, но и принимать участие в забавных состязаниях в беге. В спортивных костюмах они
+                    набирают
+                    такую скорость, что очень часто их не удатся даже сфотографировать.
+                </p>
+                <div class="photosecond">
+                    <img src="img/goose3.jpg" alt="Здесь было фото гуся">
                 </div>
             </div>
         </div>
@@ -113,6 +135,7 @@
                 </div>
             </h4>
         </div>
+        <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
