--- a/man.html
+++ b/man.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Man</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
+
     <div class="container">
         <div class="header">
             <div class="hat">
@@ -17,29 +19,55 @@
                 <p>Fashion lives not only in clothes, fashion is in the air</p>
             </div>
             <div>
-                <nav>
-                    <ul class="topmenu">
-                        <li class="firstli"><a href="index.html">ГЛАВНАЯ</a></li>
-                        <li><a href="man.html">MAN</a></li>
-                        <li><a href="woman.html">WOMAN</a></li>
-                        <li><a href="kids.html">KIDS</a></li>
-                        <li><a>PETS</a>
-                            <ul class="submenu">
-                                <li><a href="dogs.html">DOGS</a></li>
-                                <li><a href="cats.html">CATS</a></li>
-                                <li><a href="AAAAA.html">ЧТО_ТО</a></li>
-                            </ul>
-                        </li>
-                        <li><a>BEAUTY</a>
-                            <ul class="submenu">
-                                <li><a href="diets.html">DIETS</a></li>
-                                <li><a href="trends.html">TRENDS</a></li>
-                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
-                            </ul>
-                        </li>
-                        <li class="lastli"><a href="contacts.html">CONTACTS</a></li>
-                    </ul>
-                </nav>
+                <ul class="topmenu">
+                    <li class="firstli"><a href="index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="man.html">MAN</a></li>
+                    <li><a href="woman.html">WOMAN</a></li>
+                    <li><a href="kids.html">KIDS</a></li>
+                    <li><a>PETS</a>
+                        <ul class="submenu">
+                            <li><a href="dogs.html">DOGS</a></li>
+                            <li><a href="cats.html">CATS</a></li>
+                            <li><a href="AAAAA.html">ЧТО_ТО</a></li>
+                        </ul>
+                    </li>
+                    <li><a>BEAUTY</a>
+                        <ul class="submenu">
+                            <li><a href="diets.html">DIETS</a></li>
+                            <li><a href="trends.html">TRENDS</a></li>
+                            <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                        </ul>
+                    </li>
+                    <li class="lastli"><a href="contacts.html">CONTACTS</a></li>
+                </ul>
+            </div>
+
+
+
+            <div>
+                <ul class="topmenu2">
+                    <li class="firstli"><a href="index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="man.html">MAN</a></li>
+                    <li><a href="woman.html">WOMAN</a></li>
+                    <li class="lastli"><a href="kids.html">KIDS</a></li>
+                </ul>
+                <ul class="topmenu2">
+                    <li  class="firstli"><a>PETS</a>
+                        <ul class="submenu">
+                            <li><a href="dogs.html">DOGS</a></li>
+                            <li><a href="cats.html">CATS</a></li>
+                            <li><a href="goose.html">GOOSE</a></li>
+                        </ul>
+                    </li>
+                    <li ><a>BEAUTY</a>
+                        <ul class="submenu">
+                            <li><a href="diets.html">DIETS</a></li>
+                            <li><a href="trends.html">TRENDS</a></li>
+                            <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                        </ul>
+                    </li>
+                    <li class="lastli"><a href="contacts.html">CONTACTS</a></li>
+                </ul>
             </div>
         </div>
 
@@ -58,7 +86,21 @@
                         <li><a href="man.html">MAN</a></li>
                         <li><a href="woman.html">WOMAN</a></li>
                         <li><a href="kids.html">KIDS</a></li>
-                        <li><a href="">PETS</a>
+                        <li>PETS
+                            <ol>
+                                <li><a href="dogs.html">DOGS</a></li>
+                                <li><a href="cats.html">CATS</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
+                            </ol>
+                        </li>
+                        <li>BEAUTY
+                            <ol>
+                                <li><a href="diets.html">DIETS</a></li>
+                                <li><a href="trends.html">TRENDS</a></li>
+                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                            </ol>
+                        </li>
+
                         <li><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -181,8 +223,19 @@
             </div>
         </div>
         <div class="cellar">
-            <p>And what do we have here?</p>
+            <h4 class="wordCarousel">
+                <span>Fashion: </span>
+                <div>
+                    <ul class="flip4">
+                        <li>me</li>
+                        <li>you</li>
+                        <li>us</li>
+                        <li>is the world</li>
+                    </ul>
+                </div>
+            </h4>
         </div>
+        <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
