--- a/trends.html
+++ b/trends.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Man</title>
+    <title>Trends</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
+
     <div class="container">
         <div class="header">
             <div class="hat">
@@ -27,7 +29,7 @@
                             <ul class="submenu">
                                 <li><a href="dogs.html">DOGS</a></li>
                                 <li><a href="cats.html">CATS</a></li>
-                                <li><a href="AAAAA.html">ЧТО_ТО</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
                             </ul>
                         </li>
                         <li><a>BEAUTY</a>
@@ -58,7 +60,21 @@
                         <li><a href="man.html">MAN</a></li>
                         <li><a href="woman.html">WOMAN</a></li>
                         <li><a href="kids.html">KIDS</a></li>
-                        <li><a href="">PETS</a>
+                        <li>PETS
+                            <ol>
+                                <li><a href="dogs.html">DOGS</a></li>
+                                <li><a href="cats.html">CATS</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
+                            </ol>
+                        </li>
+                        <li>BEAUTY
+                            <ol>
+                                <li><a href="diets.html">DIETS</a></li>
+                                <li><a href="trends.html">TRENDS</a></li>
+                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                            </ol>
+                        </li>
+
                         <li><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -68,121 +84,92 @@
 
         <div class="main">
             <div class="nametitle">
-                <h1>Модная мужская одежда 2022:
-                    основные тренды мужской моды</h1>
+                <h1>9 главных бьюти-трендов, которым мы
+                    будем следовать в 2022 году</h1>
             </div>
             <div class="content">
-                <p>Мужская мода – не менее важная область фэшн-индустрии, чем мода для
-                    женщин во всех ее проявлениях. Современный мир моды предлагает мужчинам
-                    очень интересные тренды и новые веяния, что помогут представителям сильного
-                    пола выглядеть всегда на «отлично».</p>
+                <p>Будущий год обещает нам богатое разнообразие бьюти-тенденций — на любой
+                    вкус и стиль. В нашем гиде собрали абсолютных лидеров, от которых уже в
+                    восторге все инфлюенсеры и стилисты</p>
 
-                <div class="photo">
-                    <img src="img/man1.jpg" alt="">
-                    <img src="img/man2.jpg" alt="">
-                    <img src="img/man3.jpg" alt="">
+                <div class="photosecond">
+                    <img src="img/trend1.jpeg" alt="">
                 </div>
 
-                <p>Стоит признаться, что мужская мода не просто существует, а она еще и ни в чем
-                    не уступает женской, с каждым годом все больше развиваясь и предлагая
-                    мужчинам не только яркие и эпатажные тренды в одежде, но также весьма лаконичные
-                    и пригодные для носки в обыденной жизни вещи, и совсем не имеет значения –
-                    Вы модник или нет, одеваться стильно и со вкусом может каждый представитель
-                    сильного пола.
+                <p>С приближением новогодней ночи наступает лучшее время для апдейта не
+                    только своего гардероба, но и бьюти-привычек. Перешагнуть порог нового года
+                    предлагаем во всеоружии — так, чтобы с первых дней 2022-го перед вашей красотой
+                    расступались все возможные преграды на пути к заветным целям. Вместе
+                    со звездным визажистом и блогером Ириной Голубевой составили топ-лист с
+                    самыми горячими бьюти-трендами наступающего года и рассказали, как взять
+                    от них максимум пользы.
                 </p>
 
-                <h3>Тренды мужской одежды: пиджак</h3>
+                <h3>Сочные, натуральные губы</h3>
 
-                <p>Мужской пиджак или жакет, как и жилет, могут быть, как частью мужского брючного костюма,
-                    так и самостоятельным предметом мужского гардероба. Трендовые жакеты для мужчин презентованы
-                    с оригинальными принтами, как например, клетка или полоска. Не менее стильно смотрятся
-                    монохромные модели.</p>
+                <p>Уже в 2021 особенное внимание было приковано к натуральным губам в сочных
+                    оттенках, а в 2022 году этот тренд только укрепит свои позиции. Важно отметить,
+                    что сейчас популярность процедуры по увеличению губ сходит на нет, и в
+                    моду возвращается естественность.
+                </p>
 
-                <p>Симпатичные модели жакета для мужчин исполнены из велюра или бархата,
-                    что превосходно будут смотреться в коричнево-золотистом, изумрудном или
-                    темно-синем оттенке на осень и весну. Модный бархатный или вельветовый
-                    пиджак можно свободно носить с рубашкой, футболкой, а также в многослойных образах.</p>
+                <p>Что касается непосредственно макияжа, многие бренды будут уделять большое
+                    внимание нюдовым блескам, помадам, тинтам и карандашам. Не стоит бояться
+                    давать себе полную волю и экспериментировать с цветами: яркие ягодные оттенки,
+                    оттенки со сливовым отливом, красные помады будут актуальны как никогда.
+                    И да, все вышеперечисленное будет уместно как в повседневной жизни,
+                    так и на торжественном или светском мероприятии.
+                </p>
 
 
                 <div class="photo">
-                    <img src="img/man4.jpg" alt="">
-                    <img src="img/man5.jpg" alt="">
-                    <img src="img/man6.jpg" alt="">
+                    <img src="img/trends2.jpeg" alt="">
+                    <img src="img/trends3.jpeg" alt="">
+                    <img src="img/trends4.jpeg" alt="">
                 </div>
 
-                <h3>Модный мужской костюм</h3>
+                <h3>Макияж без бровей</h3>
 
-                <p>Неотъемлемый элемент мужского гардероба на сегодня – это трендовый брючный костюм, который
-                    отлично смотрится не только в деловых образах для
-                    офиса. Современные тенденции мужской одежды 2022-2023 позволяют представителям
-                    сильного пола подобрать стильные костюмы на каждый день, в которых
-                    можно чувствовать себя комфортно и при этом выглядеть безупречно.</p>
+                <p>Если еще 2 года назад в тренде были густые, соболиные брови, то в 2022 году в
+                    бьюти-повестку врывается макияж «без бровей». Это не значит, что их необходимо
+                    сбривать, но обесцвеченные или замаскированные брови будут пользоваться
+                    особенным спросом.
+                </p>
 
                 <div class="photosecond">
-                    <img src="img/man7.jpg" alt="">
+                    <img src="img/trends5.jpeg" alt="">
                 </div>
 
-                <p>Для образов стрит стайл и смарт кэжуал предложены модные мужские костюмы
-                    в клетку, а также модели в насыщенных цветовых оттенках. Для деловых образов
-                    лучше всего отдать предпочтение мужским костюмам в спокойном монохромном
-                    решении – серые, синие, черные, графит, карамельный</p>
+                <h3>Макияж без макияжа</h3>
 
-                <h3>Тенденции мужской одежды: модный деним</h3>
+                <p>В новом году визажисты планируют не отступать от полюбившегося многим
+                    тренда на «макияж без макияжа». Максимально воздушный мейкап останется
+                    объектом желаний и для нас, поэтому вес дамских косметичек обещает оставаться прежним.</p>
 
-                <p>Среди топовых вещей мужского гардероба, конечно же, оказался деним,
-                    без которого не обходится ни один базовый гардероб. Это могут быть мужские
-                    джинсы, джинсовые рубашки и джинсовые куртки. Последние, кстати,
-                    предложены на холодный сезон с отделкой овчиной или другим утеплителем</p>
+                <p>Стремитесь создавать легкие текстуры с нежными натуральными оттенками.
+                    Для этого не будет лишним закупиться тональными основами с невесомыми
+                    текстурами, хайлайтерами и мелкодисперсными блестками. Эти средства помогут придать 
+                    коже отдохнувший и сияющий вид без эффекта маски на лиц.</p>
 
-                <div class="photo">
-                    <img src="img/man16.jpg" alt="">
-                    <img src="img/man8.jpg" alt="">
-                    <img src="img/man9.jpg" alt="">
-                </div>
-
-                <p>Модные мужские denim total look можно составить с трендовой джинсовой
-                    одеждой для мужчин на примере джинсовой рубашки, куртки, джинсов и шорт.
-                    Оригинальность мужским образам с денимом придадут разные его цветовые сочетания,
-                    как например, белые джинсы и голубая джинсовка</p>
-
-                <h3>Модная одежда для мужчин: пальто</h3>
-
-                <p>Мужское пальто – несомненный «маст хэв» для мужчин разного возраста,
-                    как молодых и активных, так и мужчин за 50 лет. Актуальным будет мужское
-                    пальто на зиму, выполненное из твида, кашемира и шерсти.</p>
-
-                <div class="photosecond">
-                    <img src="img/man10.jpg" alt="">
-                </div>
-
-                <p>Оригинальная модель мужского пальто – дафлкот, которая представляет собой
-                    пальто из плотной ткани с большими длинными деревянными пуговицами, что
-                    идеально впишется в модные мужские луки в стиле кэжуал</p>
-
-                <h3>Лучшие мужские образы с брюками</h3>
-
-                <p>Большинство модных образов для мужчин не обходятся без трендовых брюк,
-                    которые очень круто будут смотреться в образах на осень-зиму и
-                    весну-лето. Новинки мужских брюк презентованы укороченными и
-                    зауженными моделями,
-                    свободными в стиле галифе и классическими фасонами</p>
-
-                <div class="photo">
-                    <img src="img/man15.jpg" alt="">
-                    <img src="img/man11.jpg" alt="">
-                    <img src="img/man12.jpg" alt="">
-                </div>
-
-                <p class="enderp">Отдельное внимание заслуживают модные мужские брюки с интересными
-                    принтами в клетку и полоску, а также сдержанные и лаконичные монохромные
-                    модели в цвете хаки, сером и коричневом цветах, карамельном и даже оттенке
-                    бордо. В качестве верха лучшим тандемом к модным мужским брюкам в грядущем
-                    сезоне станет рубашка либо водолазка с высоким горлом.</p>
+                    <div class="photosecond">
+                        <img src="img/trends7.jpeg" alt="">
+                    </div>
             </div>
         </div>
         <div class="cellar">
-            <p>And what do we have here?</p>
+            <h4 class="wordCarousel">
+                <span>Fashion: </span>
+                <div>
+                    <ul class="flip4">
+                        <li>me</li>
+                        <li>you</li>
+                        <li>us</li>
+                        <li>is the world</li>
+                    </ul>
+                </div>
+            </h4>
         </div>
+        <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
