--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
+
+    <div class="preloader_scene">
+        <div class="preloader_block_left"></div>
+        <div class="preloader_block_right"></div>
+        <div class="loading">
+            <p>Welcome to Fashion:
+                <br><a>Fashion lives not only in clothes, fashion is in the air</a>
+            </p>
+        </div>
+    </div>
+
     <div class="container">
         <div class="header">
             <div class="hat">
@@ -27,7 +39,7 @@
                             <ul class="submenu">
                                 <li><a href="dogs.html">DOGS</a></li>
                                 <li><a href="cats.html">CATS</a></li>
-                                <li><a href="AAAAA.html">ЧТО_ТО</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
                             </ul>
                         </li>
                         <li><a>BEAUTY</a>
@@ -55,7 +67,21 @@
                         <li><a href="man.html">MAN</a></li>
                         <li><a href="woman.html">WOMAN</a></li>
                         <li><a href="kids.html">KIDS</a></li>
-                        <li><a href="">PETS</a>
+                        <li>PETS
+                            <ol>
+                                <li><a href="dogs.html">DOGS</a></li>
+                                <li><a href="cats.html">CATS</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
+                            </ol>
+                        </li>
+                        <li>BEAUTY
+                            <ol>
+                                <li><a href="diets.html">DIETS</a></li>
+                                <li><a href="trends.html">TRENDS</a></li>
+                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                            </ol>
+                        </li>
+
                         <li><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -64,17 +90,63 @@
 
 
         <div class="main">
-            <div class="nametitle">
-                <h1>Модная мужская одежда 2022:
-                    основные тренды мужской моды</h1>
-            </div>
             <div class="content">
-               
+                <div class="slider">
+                    <div class="item">
+                        <img src="img/main5.jpg" alt="Первый слайд">
+                    </div>
+
+                    <div class="item">
+                        <img src="img/main6.jpg" alt="Второй слайд">
+                    </div>
+
+                    <div class="item">
+                        <img src="img/main7.jpeg" alt="Третий слайд">
+                    </div>
+
+                    <a class="prev" onclick="minusSlide()">&#10094;</a>
+                    <a class="next" onclick="plusSlide()">&#10095;</a>
+                </div>
+
+                <div class="slider-dots">
+                    <span class="slider-dots_item" onclick="currentSlide(1)"></span>
+                    <span class="slider-dots_item" onclick="currentSlide(2)"></span>
+                    <span class="slider-dots_item" onclick="currentSlide(3)"></span>
+                </div>
+
+                <p>Стандарты красоты кажутся вечными и непоколебимыми, однако многие слышали, что мода изменчива и
+                    непостоянна. Истина скрыта глубже: мода - это не всегда идеал красоты, но всегда что-то новое и
+                    будоражaщее. Даже если она возвращается.</p>
+
+                <div class="photo">
+                    <img src="img/main1.jpg" alt="">
+                    <img src="img/main3.jpg" alt="">
+                    <img src="img/main2.jpg" alt="">
+                </div>
+
+                <p>Многочисленные социологические опросы показывают, что стандарты красоты могут сильно отличаться в
+                    зависимости от страны, культурных предпочтений, а мода - еще более странная штука. Однако мы
+                    попробуем пробить брешь в этой изменчивости и найти секрет красоты, сделать простой рецепт, как
+                    выглядеть лучше, чем есть сейчас.</p>
+
+                <p class="enderp">Знаете популярный нынче тренд: "Красота может быть разной"? Приглашаем вместе с нами изучить и
+                    понять, зачем нужна мода и красота.</p>
             </div>
         </div>
         <div class="cellar">
-            <p>And what do we have here?</p>
+            <h4 class="wordCarousel">
+                <span>Fashion: </span>
+                <div>
+                    <ul class="flip4">
+                        <li>me</li>
+                        <li>you</li>
+                        <li>us</li>
+                        <li>is the world</li>
+                    </ul>
+                </div>
+            </h4>
         </div>
+        <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
