--- a/kids.html
+++ b/kids.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
+    
     <div class="container">
         <div class="header">
             <div class="hat">
@@ -27,7 +29,7 @@
                             <ul class="submenu">
                                 <li><a href="dogs.html">DOGS</a></li>
                                 <li><a href="cats.html">CATS</a></li>
-                                <li><a href="AAAAA.html">ЧТО_ТО</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
                             </ul>
                         </li>
                         <li><a>BEAUTY</a>
@@ -58,7 +60,21 @@
                         <li><a href="man.html">MAN</a></li>
                         <li><a href="woman.html">WOMAN</a></li>
                         <li><a href="kids.html">KIDS</a></li>
-                        <li><a href="">PETS</a>
+                        <li>PETS
+                            <ol>
+                                <li><a href="dogs.html">DOGS</a></li>
+                                <li><a href="cats.html">CATS</a></li>
+                                <li><a href="goose.html">GOOSE</a></li>
+                            </ol>
+                        </li>
+                        <li>BEAUTY
+                            <ol>
+                                <li><a href="diets.html">DIETS</a></li>
+                                <li><a href="trends.html">TRENDS</a></li>
+                                <li><a href="lifehaks.html">LIFEHACKS</a></li>
+                            </ol>
+                        </li>
+
                         <li><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -72,111 +88,132 @@
                     основные тренды детской моды</h1>
             </div>
             <div class="content">
-                <p>Детская мода давно стала отдельным витком в индустрии мира фэшн. Это направление берёт
-                    самое лучшее у своего старшего собрата, копируя яркие
-                    образы, тенденции и тренды. Не стоит сомневаться, что у детей есть своё чувство
-                    стиля. Все дети красивы, а стильная одежда добавит красок в их образы. Придерживаясь
-                    тенденций и трендов, можно помочь своему ребенку выглядеть стильно
-                    и современно.</p>
 
-                <div class="photosecond">
-                    <img src="img/kids1.jpg" alt="">
-                </div>
+                <div class="choice">
+                <h4>
+                    <ul>
+                        <li><a href="#man">Мальчики/</a></li>
+                        <li><a href="#woman">/Девочки</a></li>
+                    </ul>
+                </h4>
+            </div>
 
-                <p>Любой наряд из индустрии взрослой моды будет столь же стильно смотреться и
-                    на юных модниках. Наряды можно собирать из самых различных образов — как
-                    мира моды и кино, так и популярной культуры. Детям подойдут теплые, мягкие
-                    и пастельные тона. Материал и ткань лучше выбирать по сезону.
-                </p>
+            <p>Детская мода давно стала отдельным витком в индустрии мира фэшн. Это направление берёт
+                самое лучшее у своего старшего собрата, копируя яркие
+                образы, тенденции и тренды. Не стоит сомневаться, что у детей есть своё чувство
+                стиля. Все дети красивы, а стильная одежда добавит красок в их образы. Придерживаясь
+                тенденций и трендов, можно помочь своему ребенку выглядеть стильно
+                и современно.</p>
 
-                <h3>Основные тенденции в детской моде 2022 для девочек</h3>
+            <div class="photosecond">
+                <img src="img/kids1.jpg" alt="">
+            </div>
 
-                <p>Девочки олицетворяют собой нежность и невинность. Поэтому в основе цветовой
-                    гаммы их одежды лежат нежные пастельные оттенки, розовые и сиреневые
-                    полутона, оранжевые, желтые и зеленые краски. Также в 2021 2022 году актуален
-                    красный, синий и фиолетовый цвет.</p>
+            <p>Любой наряд из индустрии взрослой моды будет столь же стильно смотреться и
+                на юных модниках. Наряды можно собирать из самых различных образов — как
+                мира моды и кино, так и популярной культуры. Детям подойдут теплые, мягкие
+                и пастельные тона. Материал и ткань лучше выбирать по сезону.
+            </p>
 
-                <p>реди главных трендов сезона выделяют: воланы, кружевные вставки, цветочные принты,
-                    взрослые расцветки, одежду из джинса.</p>
+            <h3 id="woman">Основные тенденции в детской моде 2022 для девочек</h3>
 
-                <div class="photosecond">
-                    <img src="img/kids2.jpg" alt="">
+            <p>Девочки олицетворяют собой нежность и невинность. Поэтому в основе цветовой
+                гаммы их одежды лежат нежные пастельные оттенки, розовые и сиреневые
+                полутона, оранжевые, желтые и зеленые краски. Также в 2021 2022 году актуален
+                красный, синий и фиолетовый цвет.</p>
 
-                </div>
+            <p>реди главных трендов сезона выделяют: воланы, кружевные вставки, цветочные принты,
+                взрослые расцветки, одежду из джинса.</p>
 
-
-                <h3>Блузки</h3>
-
-                <p>Блузки в новом сезоне – отличная альтернатива топам и футболкам. Дизайнеры
-                    не поскупились на декоративные элементы: оборки, ленты, рюши и кружева.
-                    Для тинейджеров предлагаются более сдержанные варианты, больше похожие
-                    на взрослые модели.</p>
-
-                <div class="photosecond">
-                    <img src="img/kids3.jpg" alt="">
-                </div>
-
-                <h3>Юбки</h3>
-
-                <p>Без юбки не обходится гардероб ни одной юной модницы. Девочки любят
-                    модели попышнее и модельеры не обходят стороной такие фасоны. В моде
-                    плиссировка, солнце-клеш, изделия из тюля. Актуальность набирает одежда из
-                    денима. Джинсовая юбка, в качестве повседневного варианта, отлично подойдет
-                    девочкам всех возрастов.</p>
-
-                <div class="photosecond">
-                    <img src="img/kids4.jpg" alt="">
-                </div>
-
-                <h3>Верхняя одежда</h3>
-
-                <p>Верхняя одежда для девочек поражает своим разнообразием. Причем, чем
-                    младше модница, тем больше стильных и ярких вариантов она сможет на себя
-                    примерять. В тренде болоньевые куртки всех цветов радуги, шерстяные полупальто
-                    с вышивками и рисунками, длинные пуховики и комбинезоны. Актуально использование
-                    меховых воротников и вязаных вставок. Более взрослые леди
-                    смело могут остановить свой выбор на шубах и дубленках. А для весенней
-                    прохлады им подойдут джинсовые куртки и изделия из кожи.</p>
-
-                <div class="photo">
-                    <img src="img/kids5.jpg" alt="">
-                    <img src="img/kids6.jpg" alt="">
-                </div>
-
-                <h3>Основные тенденции в детской моде 2022 для мальчиков</h3>
-
-                <p>Юные джентльмены в 2021 2022 выглядят как настоящие мужчины. Актуальный
-                    во взрослых коллекциях мужественный стиль находит свое применение и в детской одежде.
-                    Популярны классические цвета: серый, синий, коричневый,
-                    черный, белый и темно-зеленый. Наряду с ними, на фото с модных показов то и
-                    дело появляются изделия голубого, зеленого, желтого, оранжевого и, даже, красного оттенка.
-                    В основе стиль кэжуал и спортивная одежда. Джинсы, толстовки,
-                    пайты, футболки, лонгсливы, чиносы – все это обязательные элементы базового
-                    гардероба. Также дизайнеры представляют в своих коллекциях детские классические брючные костюмы,
-                    рубашки и жилетк.</p>
-
-                <div class="photosecond">
-                    <img src="img/kids7.jpg" alt="">
-                </div>
-
-                <p>Верхняя одежда для маленьких мужчин полностью копирует взрослый стиль. С
-                    тем лишь ограничением, что детские куртки и пуховики значительно ярче и
-                    снабжены большим количеством декора. Дизайнеры предлагают носить мальчикам стеганые
-                    и дутые куртки из болоньи, дафлкоты, вязаные кофты. Весной и
-                    осенью популярны модели из денима. Также в детскую моду приходит кожа и ее
-                    заменители. В тренде комбинация материалов, цветов и фактур</p>
-
-                <div class="photo enderp">
-                    <img src="img/kids8.jpg" alt="">
-                    <img src="img/kids9.jpg" alt="">
-                    <img src="img/kids10.jpg" alt="">
-                </div>
+            <div class="photosecond">
+                <img src="img/kids2.jpg" alt="">
 
             </div>
+
+
+            <h3>Блузки</h3>
+
+            <p>Блузки в новом сезоне – отличная альтернатива топам и футболкам. Дизайнеры
+                не поскупились на декоративные элементы: оборки, ленты, рюши и кружева.
+                Для тинейджеров предлагаются более сдержанные варианты, больше похожие
+                на взрослые модели.</p>
+
+            <div class="photosecond">
+                <img src="img/kids3.jpg" alt="">
+            </div>
+
+            <h3>Юбки</h3>
+
+            <p>Без юбки не обходится гардероб ни одной юной модницы. Девочки любят
+                модели попышнее и модельеры не обходят стороной такие фасоны. В моде
+                плиссировка, солнце-клеш, изделия из тюля. Актуальность набирает одежда из
+                денима. Джинсовая юбка, в качестве повседневного варианта, отлично подойдет
+                девочкам всех возрастов.</p>
+
+            <div class="photosecond">
+                <img src="img/kids4.jpg" alt="">
+            </div>
+
+            <h3>Верхняя одежда</h3>
+
+            <p>Верхняя одежда для девочек поражает своим разнообразием. Причем, чем
+                младше модница, тем больше стильных и ярких вариантов она сможет на себя
+                примерять. В тренде болоньевые куртки всех цветов радуги, шерстяные полупальто
+                с вышивками и рисунками, длинные пуховики и комбинезоны. Актуально использование
+                меховых воротников и вязаных вставок. Более взрослые леди
+                смело могут остановить свой выбор на шубах и дубленках. А для весенней
+                прохлады им подойдут джинсовые куртки и изделия из кожи.</p>
+
+            <div class="photo">
+                <img src="img/kids5.jpg" alt="">
+                <img src="img/kids6.jpg" alt="">
+            </div>
+
+            <h3 id="man">Основные тенденции в детской моде 2022 для мальчиков</h3>
+
+            <p>Юные джентльмены в 2021 2022 выглядят как настоящие мужчины. Актуальный
+                во взрослых коллекциях мужественный стиль находит свое применение и в детской одежде.
+                Популярны классические цвета: серый, синий, коричневый,
+                черный, белый и темно-зеленый. Наряду с ними, на фото с модных показов то и
+                дело появляются изделия голубого, зеленого, желтого, оранжевого и, даже, красного оттенка.
+                В основе стиль кэжуал и спортивная одежда. Джинсы, толстовки,
+                пайты, футболки, лонгсливы, чиносы – все это обязательные элементы базового
+                гардероба. Также дизайнеры представляют в своих коллекциях детские классические брючные костюмы,
+                рубашки и жилетк.</p>
+
+            <div class="photosecond">
+                <img src="img/kids7.jpg" alt="">
+            </div>
+
+            <p>Верхняя одежда для маленьких мужчин полностью копирует взрослый стиль. С
+                тем лишь ограничением, что детские куртки и пуховики значительно ярче и
+                снабжены большим количеством декора. Дизайнеры предлагают носить мальчикам стеганые
+                и дутые куртки из болоньи, дафлкоты, вязаные кофты. Весной и
+                осенью популярны модели из денима. Также в детскую моду приходит кожа и ее
+                заменители. В тренде комбинация материалов, цветов и фактур</p>
+
+            <div class="photo enderp">
+                <img src="img/kids8.jpg" alt="">
+                <img src="img/kids9.jpg" alt="">
+                <img src="img/kids10.jpg" alt="">
+            </div>
+
         </div>
-        <div class="cellar">
-            <p>And what do we have here?</p>
-        </div>
+    </div>
+    <div class="cellar">
+        <h4 class="wordCarousel">
+            <span>Fashion: </span>
+            <div>
+                <ul class="flip4">
+                    <li>me</li>
+                    <li>you</li>
+                    <li>us</li>
+                    <li>is the world</li>
+                </ul>
+            </div>
+        </h4>
+    </div>
+    <div class="to-up "><img src="img/up.png" alt="" id="buttonup"></div>
     </div>
     <script src="js.js"></script>
 </body>
